fixed reports for agents

--- a/src/templates/mainpage.html
+++ b/src/templates/mainpage.html
@@ -48,7 +48,7 @@
     var reports = [];
     var home_address
     {% if current_user.agent or current_user.manager and not current_user.is_super_admin%}
-    home_address = "{{ current_user.user.home_address }}"
+    home_address = "{{ current_user.home_address }}"
     {% else %}
     home_address = "{{ current_user.home_address }}"
     {% endif %}
