--- a/src/templates/report_details.html
+++ b/src/templates/report_details.html
@@ -101,14 +101,24 @@
             </form>
                 </div>
             </div>
+             {% elif not current_user.uid==report.creator_id and not report.is_approved and not current_user.manager and not current_user.agent%}
+    <div style="text-align: center; width: 100%; margin-top: 10px">
+    <div style="width: 50%; display: inline-block;">
+        <input onchange="updateScore(this)" type="range" class="form-range customRange" value="1" min="1" max="100">
+        <div id = "score" class="d-flex justify-content-between">
+            <span>Low Urgency</span>
+            <span>Medium Urgency</span>
+            <span>High Urgency</span>
+        </div>
       {% endif %}
 
     <script>
         function updateScore(elem) {
             const score = elem.value;
-            console.log("Score being sent:", score);
+
 
             var reportid = "{{ report.id }}";
+             console.log("Score being sent:", score, reportid);
             fetch(`/score_report/${reportid}`, {
                 method: 'POST',
                 headers: {
