--- a/src/templates/mainpage.html
+++ b/src/templates/mainpage.html
@@ -47,13 +47,16 @@
 
     var reports = [];
     var home_address
+    var id
     {% if current_user.agent or current_user.manager and not current_user.is_super_admin%}
     home_address = "{{ current_user.home_address }}"
+        id = "{{ current_user.uid }}"
     {% else %}
     home_address = "{{ current_user.home_address }}"
+         id = "{{ current_user.uid }}"
     {% endif %}
    const currentUser = {
-        id: "{{ current_user.uid }}",
+        id : id,
        location: home_address
     };
     {% for report in reports %}
